[tool.poetry]
name = "aicloud"
version = "0.0.2"
description = ""
authors = ["AI Sbercloud team <support@sbercloud.ru>"]
packages=[
    { include = "aicloud" },
]
license="MIT"
readme="README.md"
homepage="https://aicloud.sbercloud.ru/"
repository="https://github.com/sbercloud-ai/aicloud"
keywords=["ai", "sbercloud"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
